--- a/src/IConfucius/mops.toml
+++ b/src/IConfucius/mops.toml
@@ -4,3 +4,4 @@ accountid = "https://github.com/aviate-labs/principal.mo#main"
 hex = "https://github.com/letmejustputthishere/motoko-hex#master"
 canistergeek = "https://github.com/usergeek/canistergeek-ic-motoko#v0.0.3"
 uuid = "https://github.com/aviate-labs/uuid.mo#v0.2.0"
+openchat-bot-sdk = "../../motoko_oc_bot_sdk"
