--- a/.github/workflows/verify-wasm.yml
+++ b/.github/workflows/verify-wasm.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         canister: [IConfucius]
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-15-intel, ubuntu-latest]
 
     steps:
       - name: checkout
