--- a/.github/workflows/verify-wasm.yml
+++ b/.github/workflows/verify-wasm.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         canister: [IConfucius]
-        os: [macos-15-intel, ubuntu-22.04]
+        os: [macos-26, macos-15-intel, ubuntu-22.04]
 
     steps:
       - name: checkout
