--- a/src/IConfucius/Makefile
+++ b/src/IConfucius/Makefile
@@ -11,12 +11,31 @@ VERIFY_NETWORK ?= ic
 .PHONY: help
 help:
 	@echo "Makefile targets:"
+	@echo "  smoketest          - Start dfx, deploy canister, and run smoke tests"
 	@echo "  build-wasm         - builds wasm using dfx and prints wasm-hash"
 	@echo "  docker-build-base  - builds the Docker base image with moc, ic-wasm, mops-cli"
 	@echo "  docker-build-wasm  - builds wasm using Docker (reproducible build)"
 	@echo "  docker-verify-wasm - verifies Docker-built wasm matches deployed canister"
 	@echo "  help               - Show this help message"
 
+###########################################################################
+# Smoke tests
+#
+.PHONY: smoketest
+smoketest:
+	dfx stop
+	dfx start --clean --background
+	$(MAKE) docker-build-wasm
+	dfx canister create $(CANISTER_NAME)
+	dfx canister install --wasm out/$(CANISTER_NAME).wasm \
+		--mode install $(CANISTER_NAME) \
+		--argument '("dfx_test_key")'
+	pytest -vv --exitfirst test/test_iconfucius_canister.py
+	dfx stop
+
+###########################################################################
+# Local builds
+#
 .PHONY: build-wasm
 build-wasm:
 	dfx build $(CANISTER_NAME) --network $(VERIFY_NETWORK)
