--- a/src/IConfucius/Makefile
+++ b/src/IConfucius/Makefile
@@ -12,7 +12,6 @@ VERIFY_NETWORK ?= ic
 help:
 	@echo "Makefile targets:"
 	@echo "  smoketest          - Start dfx, deploy canister, and run smoke tests"
-	@echo "  build-wasm         - builds wasm using dfx and prints wasm-hash"
 	@echo "  docker-build-base  - builds the Docker base image with moc, ic-wasm, mops-cli"
 	@echo "  docker-build-wasm  - builds wasm using Docker (reproducible build)"
 	@echo "  docker-verify-wasm - verifies Docker-built wasm matches deployed canister"
@@ -25,6 +24,7 @@ help:
 smoketest:
 	dfx stop
 	dfx start --clean --background
+	$(MAKE) docker-build-base
 	$(MAKE) docker-build-wasm
 	dfx canister create $(CANISTER_NAME)
 	dfx canister install --wasm out/$(CANISTER_NAME).wasm \
@@ -32,15 +32,6 @@ smoketest:
 		--argument '("dfx_test_key")'
 	pytest -vv --exitfirst test/test_iconfucius_canister.py
 	dfx stop
-
-###########################################################################
-# Local builds
-#
-.PHONY: build-wasm
-build-wasm:
-	dfx build $(CANISTER_NAME) --network $(VERIFY_NETWORK)
-	@echo "Wasm hash (SHA256):"
-	@shasum -a 256 .dfx/$(VERIFY_NETWORK)/canisters/$(CANISTER_NAME)/$(CANISTER_NAME).wasm | cut -d ' ' -f 1
 
 ###########################################################################
 # Docker-based reproducible builds
