Refactor output architecture for AI agent, harden logging security
- Core functions return structured dicts instead of printing to stdout
- New logging_config module: file permissions 0600/0700, JWT scrubbing,
  debug gating behind --verbose / ICONFUCIUS_VERBOSE
- Remove sensitive SIWB artifacts (signatures, witnesses, sighashes) from logs
- Wallet send commands return structured dicts
- Remove _capture/_capture_with_return helpers from executor
- Inline _show_balance_and_instructions into instructions command
- Add 10s delay in e2e Makefile between buy/sell for query replica sync
- Add .claude/ and .logs/ to .gitignore

--- a/agent/Makefile
+++ b/agent/Makefile
@@ -223,6 +223,9 @@ e2e-trade-bot-1:
 	@echo "--- 3/5: trade buy $(E2E_TOKEN) $(E2E_TRADE_AMT) sats ---"
 	$(ODIN) trade buy $(E2E_TOKEN) $(E2E_TRADE_AMT) --bot $(E2E_BOT)
 	@echo ""
+	@echo "Waiting 10s for query replica to sync..."
+	@sleep 10
+	@echo ""
 	@echo "--- 4/5: trade sell $(E2E_TOKEN) all ---"
 	$(ODIN) trade sell $(E2E_TOKEN) all --bot $(E2E_BOT)
 	@echo ""
@@ -258,6 +261,9 @@ e2e-trade-all-bots:
 	@echo ""
 	@echo "--- 3/5: trade buy $(E2E_TOKEN) $(E2E_TRADE_AMT) sats ---"
 	$(ODIN) trade buy $(E2E_TOKEN) $(E2E_TRADE_AMT) --all-bots
+	@echo ""
+	@echo "Waiting 10s for query replica to sync..."
+	@sleep 10
 	@echo ""
 	@echo "--- 4/5: trade sell $(E2E_TOKEN) all ---"
 	$(ODIN) trade sell $(E2E_TOKEN) all --all-bots
