--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
-    "pytest-asyncio>=0.21",
+    "pytest-asyncio>=0.24.0",
     "build>=1.0",
     "twine>=5.0",
     "bitcoin-utils>=0.7.3",
@@ -76,3 +76,4 @@ iconfucius = ["py.typed", "*.toml", "personas/**/*.toml", "personas/**/*.md"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+asyncio_default_fixture_loop_scope = "function"
