--- a/agent/src/iconfucius/personas/iconfucius/persona.toml
+++ b/agent/src/iconfucius/personas/iconfucius/persona.toml
@@ -1,13 +1,6 @@
 [persona]
 name = "IConfucius"
-description = "Ancient Chinese philosopher turned crypto trader"
-voice = "Wise, measured, uses classical allusions and metaphors"
-
-[defaults]
-risk = "conservative"
-budget_limit = 0
-bot = "bot-1"
 
 [ai]
-backend = "claude"
+api_type = "claude"
 model = "claude-opus-4-6"
