(feat): bundle client into Python package, add iconfucius ui command
Move client/ → src/iconfucius/client/ so the web UI ships as part of the
Python package. Only pre-built static assets are included in PyPI via
package-data; React source, node_modules, etc. are automatically excluded.

- git mv client/ into src/iconfucius/client/, rename proxy-server.py → server.py
- Add static file serving with SPA fallback and directory traversal prevention
- Add run_server() entry point with friendly port-in-use error message
- Add `iconfucius ui` CLI command (--port, --no-browser)
- Add scripts/bundle_client.sh to build React → client/static/
- Update header: project folder name with hover tooltip, BTC/ICONFUCIUS prices,
  rename status indicators to Odin/Chat
- Add 23 tests covering CLI routing, static resolution, and server lifecycle
- Update README with Web UI section

--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -72,7 +72,7 @@ include = ["iconfucius*"]
 exclude = ["canisters*"]
 
 [tool.setuptools.package-data]
-iconfucius = ["py.typed", "*.toml", "personas/**/*.toml", "personas/**/*.md"]
+iconfucius = ["py.typed", "*.toml", "personas/**/*.toml", "personas/**/*.md", "client/static/**/*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
